--- a/styles.css
+++ b/styles.css
@@ -64,6 +64,13 @@ h1 {
   padding: 5%;
 }
 
+h2 {
+  font-family: "Montserrat-Bold", sans-serif;
+  font-weight: bold;
+  line-height: 1.5;
+  font-size: 3rem;
+}
+
 h3 {
   font-family: "Montserrat-Bold", sans-serif;
   font-weight: bold;
@@ -80,4 +87,43 @@ p {
 
 .feature-box i:hover {
   color: #ff4c68;
+}
+
+/* Testimonial */
+
+#testimonials {
+  padding: 7% 15%;
+  text-align: center;
+  background-color: #ef8172;
+  color: #fff;
+}
+
+.testimonial-image {
+  border-radius: 100%;
+  width: 10%;
+  margin: 20px;
+}
+
+/* Press */
+
+#press {
+  background-color: #ef8172;
+  text-align: center;
+  padding-bottom: 3%;
+}
+
+.press-logo {
+  width: 15%;
+  margin: 20px 20px 50px;
+}
+
+/* Pricing */
+
+#pricing {
+  padding: 100px;
+  text-align: center;
+}
+
+.pricing-column {
+  padding: 3% 2%;
 }
