--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@ h1 {
 }
 
 .container-fluid {
-  padding: 3% 15%;
+  padding: 3% 15% 7%;
 }
 
 /* Navigation Bar */
@@ -51,12 +51,17 @@ h1 {
 .title-image {
   width: 60%;
   transform: rotate(25deg);
+  position: relative;
+  margin-bottom: -60%;
 }
 
 /* Features */
 
 #features {
   padding: 7% 15%;
+  background-color: #fff;
+  position: relative;
+  z-index: 1;
 }
 
 .feature-box {
